--- a/Tailspin-SpaceGame-Tests1/Tailspin-SpaceGame-Tests1.csproj
+++ b/Tailspin-SpaceGame-Tests1/Tailspin-SpaceGame-Tests1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,6 +17,7 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.17.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="120.0.6099.10900" />
     <PackageReference Include="WebDriverManager" Version="2.17.1" />
   </ItemGroup>
 
